Author: Shiro Takeda
Maintainer: Shiro Takeda
Time-stamp: <2016-03-01 10:40:11 st>
----------------------------------------------------

Change logs of GAMS mode.
----------------------------------------------------

Version 5.1 ()
----------------------------------

* Changed the name of the main lisp code from "gams.el" to "gams-mode.el".

* The name of feature provided by gams-mode.el changed from gams to
  gams-mode. So you need to use (require 'gams-mode) instead of (require 'gams).

* Changed the name of variables and functions whose prefix is "gams*" or
  "gams:". Now all variables and functions defined in gams-mode.el have
  prefix "gams-". As a result of this change, names of the following
  customizable variables changed.

  Old name                         New name   
  `gams:process-command-name'   -> `gams-process-command-name'
  `gams:process-command-option' -> `gams-process-command-option'

  You need to modify init.el setting.


Version 5.0 (2016-02-03)
----------------------------------

* Suppose that you have a code like

  	$setglobal sub_program sub_program_default.gms

  	$include %sub_program%

  With this code, GAMS reads the content of sub_program_default.gms
  file. But the items in sub_program_default.gms file is not displayed
  when you evoke `gams-show-identifier-list' (C-cC-a) because GAMS mode
  regards %sub_program% as a filename literally and cannot find it.

  In the new GAMS mode, you can list the items in sub_program_default.gms
  file by adding the following line.

  	$setglobal sub_program sub_program_default.gms

	* gams-include-file: sub_program_default.gms
  	$include %sub_program%

  The line "* gams-include-file: sub_program_default.gms" is a comment
  line and GAMS ignores it. But the GAMS mode interprets that

  	$include sub_program_default.gms

  So the items in "sub_program_default.gms" are listed by
  `gams-show-identifier-list'.
  
  The specification by "gams-include-file" is used in the sample file