@@ -1,6 +1,6 @@
 Author: Shiro Takeda
 Maintainer: Shiro Takeda
-Time-stamp: <2016-03-01 10:40:11 st>
+Time-stamp: <2016-03-02 12:43:13 st>
 ----------------------------------------------------
 
 Change logs of GAMS mode.
@@ -24,6 +24,11 @@ Version 5.1 ()
   `gams:process-command-option' -> `gams-process-command-option'
 
   You need to modify init.el setting.
+
+* Change the default value of variables `gams-statement-file' and `gams-template-file'.
+
+  gams-statement-file -> "~/.emacs.d/gams-statement.txt"
+  gams-template-file -> "~/.emacs.d/gams-template.txt"
 
 
 Version 5.0 (2016-02-03)
